# DynamicConvexHull

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  paper.txt
benchmarks/: CMakeLists.txt  analyze_complexity.py  benchmark_convex_hull.cpp  benchmark_split_join.cpp  benchmark_stabbing_line.cpp  results.json  results_v2.json
examples/: CMakeLists.txt  stabbing_line_demo.cpp
include/: AvlTree.h  CHTree.h  StabbingLineStructure.h  inexact.h  util.h
tests/: CMakeLists.txt  debug_stabbing_line.cpp  hull_test_helpers.hpp  test_build_complexity.cpp  test_convex_hull.cpp  test_split_debug.cpp  test_split_merge.cpp  test_stabbing_line.cpp
